<resources>
    <string name="app_name" translatable="false">Hexagon Rom</string>
    <string name="droidvn">DroidVn Team</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="first_layout_title">Placeholder for various shit\nand naked chicks!!!</string>
    <string name="second_layout_title">Second layout</string>
    <string name="third_layout_title">Third layout</string>
    <string name="hexagon_rom_title">Hexagon Rom</string>
    <string name="pun_title">One rom to rule them all</string>
    <string name="more_title">More</string>
    <string name="about_title">About</string>
    <string name="other_title">Other</string>
    <string name="g_community">G+ community</string>
    <string name="ui_title">HexagonRom Interface</string>
    <string name="builtin_title">BUILT-IN</string>
    <string name="addons_title">ADDONS</string>
    <string name="welcome_title">WELCOME\nto the real world!!!</string>
    <string name="logo">logo</string>
    <string name="display_animations_title">Display and animations</string>
    <string name="advanced_title">Advanced</string>
    <string name="transparency_porn_title">Transparency porn</string>
    <string name="notificaitons_title">Notification drawer</string>
    <string name="statubar_title">Status bar</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="systemui_tuner_title">SystemUI Tuner</string>
    <string name="systemui_tuner_summary">Marshmallow take on SystemUI tuning</string>
    <string name="systemui_tuner_dilog_title">Attention</string>
    <string name="systemui_tuner_dilog_warning">Tuner offers limited SystemUI modifications. Link has been added to hexagonrom for easier access.\nHere you can also add new tiles.</string>
    <string name="aicp_downloads_title">Downloads</string>
    <string name="aicp_gerrit_title">Gerrit</string>
    <string name="send_mail_intent">Send mail...</string>
    <string name="hidden_anim_activity_title">Yoga time!!!</string>
    <string name="hidden_anim_more_title">MORE?</string>
    <string name="hidden_anim_more_nice">NICE</string>
    <string name="continue_title">Continue</string>
    <string name="settings_activity_title">AE settings</string>
    <string name="nothing_title">Nothing to see here yet, move along</string>
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>
    <string name="storage_permission_granted">Permission Granted, Now you can write to storage.</string>
    <string name="storage_permission_not_granted">Permission Denied, You cannot write to storage.</string>
    <string name="recents_panel_title">Recents panel</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
    <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
    <string name="stock_recents_disabled">Stock recents are disabled!</string>
    <string name="alternatives_title">Alternatives</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_title_summary">View recent changes in ROM</string>
    <string name="changelog_error">Unable to load changelog</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_enabled">Enabled</string>
    <string name="qs_brightness_slider_disabled">Disabled</string>
    <string name="lcd_density">LCD density</string>
    <string name="dialog_title_lcd_density">LCD density</string>
    <string name="lcd_density_value_format">%d DPI</string>
    <string name="lcd_density_default_value_format">%d DPI (default)</string>
    <string name="restarting_ui">Restarting UI\u2026</string>
    <string name="lcd_density_prompt_message">Some apps may not function at non-standard dpi.\n\nThis will restart your phone.</string>
    <string name="print_restart">Restart</string>
    <string name="force_expanded_notifications_title">Force expanded notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode messages</string>
    <string name="disable_fc_notifications_title">Disable FC notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="traffic_title">Traffic</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="default_string">Default</string>
    <string name="su_indicator">Superuser indicator</string>
    <string name="su_indicator_summary_on">Superuser indicator is visible when a session is active</string>
    <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
    <string name="status_bar_custom_header_title">Time contextual header</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="carrier_options">Carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
    <string name="status_bar_carrier_color">Carrier label color</string>
    <string name="status_bar_carrier_size">Carrier label text size</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="notif_drawer_weather_title">Weather</string>
    <string name="notif_drawer_weather_summary">Toggle notification drawer weather info</string>
    <string name="category_app_circle_bar_title">App launcher</string>
    <string name="app_circle_bar_title">App Circle Bar</string>
    <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
    <string name="app_circle_bar_included_apps_title">Included apps</string>
    <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="enable_task_manager_title">Task Manager</string>
    <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
    <string name="headset_connect_player_title">Launch music app</string>
    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
    <string name="screenshot_sound_title">Screenshot sound</string>
    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings on lockscreen</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings in the keyguard for a secure lock only</string>
    <string name="status_bar_header_font_style_title">Header font style</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="unit_percent">\u0025</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="quicksettings_tiles_category">QuickSettings Panel Configurations</string>
</resources>