<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/ui_title">
        <menu>
            <item
                android:id="@+id/nav_display_animations"
                android:checkable="true"
                android:icon="@drawable/ic_display_animation"
                android:title="@string/display_animations_title" />
            <item
                android:id="@+id/nav_statusbar"
                android:checkable="true"
                android:icon="@drawable/ic_statusbar"
                android:title="@string/statubar_title" />
            <item
                android:id="@+id/nav_notif_drawer"
                android:checkable="true"
                android:icon="@drawable/ic_notif"
                android:title="@string/notificaitons_title" />
            <item
                android:id="@+id/nav_recents"
                android:checkable="true"
                android:icon="@drawable/ic_recents"
                android:title="@string/recents_panel_title" />
            <item
                android:id="@+id/nav_lockscreen"
                android:checkable="true"
                android:icon="@drawable/ic_lockscreen"
                android:title="@string/lockscreen_title" />
            <item
                android:id="@+id/nav_transparency_porn"
                android:checkable="true"
                android:icon="@drawable/ic_opacity"
                android:title="@string/transparency_porn_title" />
            <item
                android:id="@+id/nav_advanced"
                android:checkable="true"
                android:icon="@drawable/ic_advanded"
                android:title="@string/advanced_title" />

            <item
                android:id="@+id/nav_more"
                android:checkable="true"
                android:icon="@drawable/ic_more"
                android:title="@string/more_title" />

            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_about"
                android:title="@string/about_title" />
        </menu>
    </item>

</menu>
