<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hexextras="http://schemas.android.com/apk/res/com.droidvnteam"
    android:title="@string/category_app_circle_bar_title" >

    <com.droidvnteam.hexagonrom.preferences.SystemSettingSwitchPreference
        android:key="enable_app_circle_bar"
        android:title="@string/app_circle_bar_title"
        android:summary="@string/app_circle_bar_summary" />

    <com.droidvnteam.hexagonrom.preferences.AppMultiSelectListPreference
        android:key="app_circle_bar_included_apps"
        android:persistent="false"
        android:title="@string/app_circle_bar_included_apps_title"
        android:summary="@string/app_circle_bar_included_apps_summary"
        android:dependency="enable_app_circle_bar" />

    <com.droidvnteam.hexagonrom.widget.SeekBarPreferenceCham
        android:key="trigger_width"
        android:title="@string/trigger_width_title"
        android:summary="@string/trigger_width_summary"
        android:defaultValue="4"
        hexextras:max="64"
        hexextras:min="4"
        hexextras:unitsLeft=""
        hexextras:unitsRight="px"
        android:dependency="enable_app_circle_bar" />

    <com.droidvnteam.hexagonrom.widget.SeekBarPreferenceCham
        android:key="trigger_top"
        android:title="@string/trigger_top_title"
        android:summary="@string/trigger_top_summary"
        android:defaultValue="0"
        hexextras:max="99"
        hexextras:min="0"
        hexextras:unitsLeft=""
        hexextras:unitsRight="%"
        android:dependency="enable_app_circle_bar" />

    <com.droidvnteam.hexagonrom.widget.SeekBarPreferenceCham
        android:key="trigger_bottom"
        android:title="@string/trigger_bottom_title"
        android:summary="@string/trigger_bottom_summary"
        android:defaultValue="100"
        hexextras:max="100"
        hexextras:min="1"
        hexextras:unitsLeft=""
        hexextras:unitsRight="%"
        android:dependency="enable_app_circle_bar" />

</PreferenceScreen>
