<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hexagonrom="http://schemas.android.com/apk/res/com.droidvnteam.hexagonrom">

    <com.droidvnteam.hexagonrom.preferences.SystemSettingSwitchPreference
        android:key="headset_connect_player"
        android:title="@string/headset_connect_player_title"
        android:summary="@string/headset_connect_player_summary"
        android:defaultValue="false" />

    <!-- Screenshot tone -->
    <com.droidvnteam.hexagonrom.preferences.SystemSettingSwitchPreference
        android:key="screenshot_sound"
        android:title="@string/screenshot_sound_title"
        android:summary="@string/screenshot_sound_summary"
        android:defaultValue="true" />

    <com.droidvnteam.hexagonrom.preferences.SystemSettingSwitchPreference
        android:key="disable_immersive_message"
        android:title="@string/disable_immersive_message_title"
        android:summary="@string/disable_immersive_message_summary" />

</PreferenceScreen>
